--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
   <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
     <!-- Project 1 -->
-    <a href="#" class="block p-6 bg-gray-900 rounded-lg shadow hover:shadow-lg transition-shadow duration-300">
+    <a href="https://github.com/Saad-F17/Property-Management-System" class="block p-6 bg-gray-900 rounded-lg shadow hover:shadow-lg transition-shadow duration-300">
       <h5 class="mb-2 text-2xl font-semibold text-white">PropSys</h5>
       <p class="text-gray-400">Property Management System - <strong>MERN Stack</strong></p>
       <p class="text-gray-400 mt-2">Built a full-stack property management system using Angular 18 with real API integration, featuring property listings,  booking functionality, and admin tools for managing properties and sites.</p>
