--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
         <script>
             var typed = new Typed('#element', {
-                strings: ['Web Developer', 'Java Programmer.'],
+                strings: ['Software Developer', 'Web Developer.'],
                 typeSpeed: 50,
             });
         </script>
