--- a/index.html
+++ b/index.html
@@ -448,19 +448,19 @@
     <!-- Project 1 -->
     <a href="https://github.com/Saad-F17/Property-Management-System" class="block p-6 bg-gray-900 rounded-lg shadow hover:shadow-lg transition-shadow duration-300">
       <h5 class="mb-2 text-2xl font-semibold text-white">PropSys</h5>
-      <p class="text-gray-400">Property Management System - <strong>MERN Stack</strong></p>
+      <p class="text-gray-400">Property Management System - <strong>TypeScript, Angular</strong></p>
       <p class="text-gray-400 mt-2">Built a full-stack property management system using Angular 18 with real API integration, featuring property listings,  booking functionality, and admin tools for managing properties and sites.</p>
     </a>
 
     <!-- Project 2 -->
     <a href="#" class="block p-6 bg-gray-900 rounded-lg shadow hover:shadow-lg transition-shadow duration-300">
       <h5 class="mb-2 text-2xl font-semibold text-white">Holistic</h5>
-      <p class="text-gray-400">Digital Health Ecosystem - <strong>React</strong></p>
+      <p class="text-gray-400">Digital Health Ecosystem - <strong>TypeScript, Angular</strong></p>
       <p class="text-gray-400 mt-2">Developed a digital health ecosystem integrating services like health assessments, lifestyle tracking, medical consultations, and personalized wellness plans using Angular and TypeScript.</p>
     </a>
 
     <!-- Project 3 -->
-    <a href="#" class="block p-6 bg-gray-900 rounded-lg shadow hover:shadow-lg transition-shadow duration-300">
+    <a href="https://github.com/Saad-F17/Epetopia" class="block p-6 bg-gray-900 rounded-lg shadow hover:shadow-lg transition-shadow duration-300">
       <h5 class="mb-2 text-2xl font-semibold text-white">E-Petopia</h5>
       <p class="text-gray-400">Pet Shop Portal - <strong>Django</strong></p>
       <p class="text-gray-400 mt-2">Collaborated on an online pet shop platform using JavaScript and Django. Implemented product browsing, cart management, and integrated payment gateway.</p>
