--- a/index.html
+++ b/index.html
@@ -454,9 +454,10 @@
 
     <!-- Project 2 -->
     <a href="#" class="block p-6 bg-gray-900 rounded-lg shadow hover:shadow-lg transition-shadow duration-300">
-      <h5 class="mb-2 text-2xl font-semibold text-white">Holistic</h5>
-      <p class="text-gray-400">Digital Health Ecosystem - <strong>TypeScript, Angular</strong></p>
-      <p class="text-gray-400 mt-2">Developed a digital health ecosystem integrating services like health assessments, lifestyle tracking, medical consultations, and personalized wellness plans using Angular and TypeScript.</p>
+      <h5 class="mb-2 text-2xl font-semibold text-white">POCS System</h5>
+      <p class="text-gray-400">Pre-Owned Cars Sales System - <strong>TypeScript, Angular</strong></p>
+      <p class="text-gray-400 mt-2">It is a comprehensive web application built using Angular, designed to streamline operations in a used car dealership. It features role-based access control, responsive UI, and API integration for dynamic data handling, offering a complete solution for inventory, sales, accounting, and tax compliance.
+</p>
     </a>
 
     <!-- Project 3 -->
